--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -115,6 +115,17 @@ h1{
     margin-right: 45px;
     text-align: center;
 }
+.showroom{
+    float: right;
+    width: 50%;
+    color: #6d24ff;
+    background-color: #c58ec7a9;
+    padding: 30px;
+    border-radius: 5px;
+    margin-top: 20px;
+    margin-right: 45px;
+    text-align: center;
+}
 .contenedor{
     width: 100%;
     min-height: 400px;
