--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -58,7 +58,13 @@ div p{
 }
 div form{
     padding: 10px;
+    transition: all 2s;
 }
+input:focus{
+    font-size: 25px;
+    color: palevioletred;
+}
+
 main{
     height: 100vh;
     width: 100%;
@@ -93,6 +99,10 @@ main{
 h1{
     text-align: center;
 }
+.call:hover{
+    background-color: lightcoral;
+    height: 200px;
+}
 .contacto{
     float: right;
     width: 50%;
@@ -114,6 +124,7 @@ h1{
     margin-top: 20px;
     margin-right: 45px;
     text-align: center;
+    background-image: linear-gradient(lightblue , rgb (208 , 152 , 223) , #8c52ff);
 }
 .showroom{
     float: right;
